--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
-  "cSpell.words": ["Getx", "Servies"]
+  "cSpell.words": ["Custombuttonauth", "Getx", "Servies"]
 }
