--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   device_preview: ^1.2.0
   responsive_builder: ^0.7.1
   image_pickers: ^2.0.0+2
+  flutter_otp_text_field: ^1.2.0
 
 dev_dependencies:
   flutter_test:
