--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   responsive_builder: ^0.7.1
   image_pickers: ^2.0.0+2
   flutter_otp_text_field: ^1.2.0
+  lottie: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -102,6 +103,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
