--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ dependencies:
   image_pickers: ^2.0.0+2
   flutter_otp_text_field: ^1.2.0
   lottie: ^3.1.3
+  strings: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -104,6 +105,7 @@ flutter:
   assets:
     - assets/images/
     - assets/lottie/
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
